feat: product social posts API
